--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "doctrine/common": "^2.6",
         "symfony/config": "^3.4|^4.4",
         "symfony/http-foundation": "^3.4|^4.4",
-        "polidog/simple-api-bundle": "dev-feature/event"
+        "polidog/simple-api-bundle": "^0.0.7"
     },
     "license": "MIT",
     "authors": [
