--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "doctrine/common": "^2.6",
         "symfony/config": "^3.4|^4.4",
         "symfony/http-foundation": "^3.4|^4.4",
-        "polidog/simple-api-bundle": "^0.0.7"
+        "polidog/simple-api-bundle": "^0.0.7",
+        "symfony/routing": "^3.4|^4.4"
     },
     "license": "MIT",
     "authors": [
